# VehicleEmbeddedLinux

./: .gitignore  CMakeLists.txt  README.md  auto_logger_demo  build_arm.sh  run_qemu.sh  toolchain-arm.cmake
include/: auto_logger.hpp  vehicle_config.hpp
src/: auto_logger.cpp  main.cpp  vehicle_config.cpp
